<resources xmlns:tools="http://schemas.android.com/tools">
    <!--App Titles and Headers -->
    <string name="app_name">Willow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Stress</string>
    <string name="title_notifications">Sleep</string>
    <string name="title_daily">Daily Life</string>
    <string name="title_data">Data</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textView">TextView</string>
    <string name="morning_quiz">Morning Quiz</string>
    <string name="todo" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="sleep">Sleep</string>

    <!--Getting started with account-->
    <string name="welcomeLogIn">Welcome!</string>
    <string name="username">Username</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an Account!</string>
    <string name="email">Email</string>

    <!--Titles/Headers -->
    <string name="view_the_daily_quiz">View the Daily Quiz</string>
    <string name="view_past_quizzes">View Past Quizzes</string>
    <string name="ViewQuizzes">View today\'s quizzes!</string>
    <string name="relax_time">How much time did you spend being productive?</string>
    <string name="relax_timeQ">How much time did you spend relaxing?</string>
    <string name="how_much_time_did_you_spend_exercising">How much time did you spend exercising?</string>
    <string name="rateStress">Rate your stress levels:</string>

    <string name="welcomeMsg">Welcome to Willow!</string>
    <string name="startMessage">Lets get started!!!</string>
    <string name="quizDailyMessage">View today\'s quizzes!</string>
    <string name="previous_quizzes">Previous Quizzes</string>
    <string name="stressGoalsInput">Write down your goals! (list below)</string>
    <string name="stressSectionHeader">Stress Section</string>

    <!--Quiz related statements/questions-->
    <string name="question1">Rate your mood.</string>
    <string name="question2">How many hours did you sleep last night?</string>
    <string name="question3">Rate your sleep?</string>
    <string name="question4">How many hours did you spend being productive?</string>
    <string name="question5">How many hours did you spend relaxing?</string>
    <string name="question6">How many hours did you spend exercising?</string>
    <string name="question7">Rate your stress levels.</string>
    <string name="question8">What contributed to your stress?</string>
    <string name="question9">Any other notes about your day</string>
    <string name="your_past_goals">Your past goals:</string>
    <string name="moodRating1">Good</string>
    <string name="rating2">Decent</string>
    <string name="rating3">Bad</string>
    <string name="moodRating4">Tired</string>
    <string name="sleepRating1">Good</string>
    <string name="stressRating1">High</string>
    <string name="stressRating2">Moderate</string>
    <string name="stressRating3">Low</string>
    <string name="stressRating4">None</string>
    <string name="hintText">Enter response</string>
    <string name="otherNotes">Enter notes</string>
    <string name="submit">Submit</string>
    <string name="view_quiz">View Quiz!</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="other">Other</string>
    <string name="stressors">Stressors</string>

    <string name="pick_a_date">Pick a date!</string>
    <string name="date_picker">Date Picker</string>

</resources>