<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/pickDate"
        android:layout_width="201dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/pick_a_date"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101"
        android:textColor="@color/white"/>


    <Button
        android:id="@+id/btn_viewQuiz"
        android:layout_width="186dp"
        android:layout_height="78dp"
        android:text="@string/view_quiz"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/datePickerBtn"
        android:layout_width="219dp"
        android:layout_height="82dp"
        android:background="@color/scheme_purple_1"
        android:onClick="openDatePicker"
        android:text="@string/select_date"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <ImageView
        android:id="@+id/datePicker"
        android:layout_width="104dp"
        android:layout_height="82dp"
        android:contentDescription="@string/date_picker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/datePickerBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255"
        app:srcCompat="@drawable/calendar" />

    <ListView
        android:id="@+id/lv_quizData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"></ListView>

</androidx.constraintlayout.widget.ConstraintLayout>


